Style header, navigation, and logo with flexbox.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,28 @@
             margin: 0 auto;
             padding: 20px;
         }
+        header {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px 0;
+        }
+        nav {
+            display: flex;
+            align-items: center;
+        }
+        nav a {
+            margin: 0 20px;
+            text-decoration: none;
+            color: var(--text-color);
+        }
+        .logo {
+            width: 30px;
+            height: 30px;
+            background-color: var(--primary-color);
+            transform: rotate(45deg);
+            margin: 0 40px;
+        }
     </style>
 </head>
 <body>
