--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +13,8 @@
             --text-color: #333;
         }
 
-        body, html {
+        body,
+        html {
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
@@ -25,21 +27,25 @@
             margin: 0 auto;
             padding: 20px;
         }
+
         header {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 20px 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px 0;
         }
+
         nav {
             display: flex;
             align-items: center;
         }
+
         nav a {
             margin: 0 20px;
             text-decoration: none;
             color: var(--text-color);
         }
+
         .logo {
             width: 30px;
             height: 30px;
@@ -47,8 +53,46 @@
             transform: rotate(45deg);
             margin: 0 40px;
         }
+
+        .hero {
+            background-color: var(--hero-background);
+            color: var(--hero-text);
+            padding: 40px;
+            border-radius: 20px;
+            text-align: center;
+        }
+
+        .hero h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+        }
+
+        .hero p {
+            margin-bottom: 30px;
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .button {
+            font-weight: bold;
+            background-image: linear-gradient(to right, var(--primary-color), var(--secondary-color));
+            color: var(--primary-color);
+            padding: 10px 20px;
+            border-radius: 25px;
+            text-decoration: none;
+            display: inline-block;
+            transition: all 0.3s ease;
+        }
+
+        .button:hover {
+            background-image: linear-gradient(to right, var(--secondary-color), var(--primary-color));
+            transform: translateY(-2px);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -60,13 +104,15 @@
                 <a href="#contact">CONTACT</a>
             </nav>
         </header>
-        
+
         <main>
             <section class="hero">
                 <h1>Visual Designer Based in Indonesia</h1>
-                <p>I'm a UI/UX designer passionate about creating designs that not only meet the functional requirements but also delight users and evoke emotional connections.</p>
+                <p>I'm a UI/UX designer passionate about creating designs that not only meet the functional requirements
+                    but also delight users and evoke emotional connections.</p>
             </section>
         </main>
     </div>
 </body>
+
 </html>
