Add media queries for responsive design on mobile and tablet.

--- a/index.html
+++ b/index.html
@@ -182,6 +182,63 @@
             font-size: 1.2em;
             line-height: 1.8;
         }
+
+        @media (max-width: 768px) {
+            nav {
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
+            nav a {
+                margin: 30px;
+            }
+
+            .logo {
+                margin: 20px 0;
+            }
+
+            .hero h1 {
+                font-size: 2em;
+            }
+
+            .projects {
+                flex-direction: column;
+            }
+
+            .project {
+                width: 100%;
+                margin-bottom: 20px;
+            }
+
+            .about {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+
+            .profile-section {
+                margin-bottom: 30px;
+            }
+
+            .about-text {
+                width: 100%;
+            }
+        }
+
+        @media (max-width: 580px) {
+            .hero p {
+                font-size: 0.9em;
+            }
+
+            .button {
+                padding: 8px 15px;
+            }
+
+            .project-info .button {
+                width: 25px;
+                height: 25px;
+            }
+        }
     </style>
 </head>
 
