Fix small issues and refactor repetitive styles.

--- a/index.html
+++ b/index.html
@@ -239,6 +239,13 @@
                 height: 25px;
             }
         }
+
+        .button,
+        .project-info .button {
+            transition: all 0.3s ease;
+            font-weight: bold;
+            background-image: linear-gradient(to right, var(--primary-color), var(--secondary-color));
+        }
     </style>
 </head>
 
